snapshots/syntax/library/functions/resources/loadpicture/loadpicture_array_assignment.snap
---
source: src/syntax/library/functions/resources/loadpicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: images
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: i
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: LoadPicture
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: files
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: i
        - kind: RightParenthesis
          text: )
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
