snapshots/syntax/library/functions/resources/loadpicture/loadpicture_function_argument.snap
---
source: vb6parse/src/syntax/library/functions/resources/loadpicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: SetPicture
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: LoadPicture
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"image.bmp\""
                    - kind: RightParenthesis
                      text: )
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
